--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>            
+  <head>
+    <title>KartKalc.com || Calculations for all things go karts!</title>
+    <meta name="description" content="Find the top speed, torque and recommended power for your project kart and check component compatibility.">
+    
     <!--Scripts-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/js/bg.js"></script>
@@ -33,7 +36,6 @@
   </head>
   
   <body>
-    <title>KartKalc.com</title>
     <nav>
     <button class="my-button" onclick="openNav()">
         <i class="fas fa-bars"></i>
@@ -123,7 +125,7 @@
     <label>Desired speed (MPH):</label></br>
     <input style="width: 100%; margin-bottom: 10px;" type="text" id="speed3">
     <br>
-    <label>Mass of kart:</label></br>
+    <label>Mass of kart & driver:</label></br>
     <input style="width: 100%;" type="text" id="mass3">
     <br><br>
       
