--- a/pages/contact.html
+++ b/pages/contact.html
@@ -46,7 +46,7 @@
             <li><a href="/pages/policies.html">privicy & terms.</a></li>
         </ul>
     </nav>
-    
+    <br><br><br>
     <h1>KartKalc.com</h1>
   
   <form>
@@ -64,6 +64,10 @@
   <br><br>
   <button type="submit" value="Submit" onclick="contact()">Submit</button>
 </form>
-    
+    <style>
+  * {
+    padding: 10px;
+  }
+</style>
   </body>
 </html>
