--- a/pages/policies.html
+++ b/pages/policies.html
@@ -198,5 +198,10 @@
 
 <p>As long as the website and the information and services on the website are provided free of charge, we will not be liable for any loss or damage of any nature.</p>
     
+<style>
+  * {
+    padding: 10px;
+  }
+</style>
   </body>
 </html>
