--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <h4 style="color: #063340;">&copy; KartKalc.com</h4>
     </div>
 
- <div class="panel" data-color="teal" style="color: #f4f4f4;">
+ <div class="panel" data-color="teal" style="color: #f4f4f4; background: #088280;">
 
       <h2 style="color: #f4f4f4;">2.  Find Max Torque</h2>
     <h3 style="margin-top: 50px;">Enter gear ratios, motor torque and wheel size to calculate your kart's top speed:</h3>
@@ -117,7 +117,7 @@
       
     </div>
 
-    <div class="panel" data-color="green" style="color: #f4f4f4;">
+    <div class="panel" data-color="green" style="color: #f4f4f4; background: #008000;">
       
       <h2 style="color: #f4f4f4;">4.  Find recommended motor power</h2>
     <h3 style="margin-top: 50px;">Enter gear ratios, wheel size and total kart+driver mass to find minimum power:</h3>
